--- a/Console/App.config
+++ b/Console/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<system.net>
 		<defaultProxy>
-			<proxy usesystemdefault="True" bypassonlocal="False" />
+			<proxy usesystemdefault="True" bypassonlocal="False"/>
 		</defaultProxy>
 	</system.net>
 	
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
 </configuration>
